osprey_worker/src/osprey/engine/ast_validator/tests/test_validation_context/test_validation_transforms_osprey_py_ast_error.txt
error: functions with non-keyword arguments are not supported
--> main.sml:1:0
     |
   1 | Foo(1)
     | ^
